[tool.poetry]
name = "saigo.info-backend"
version = "0.1.1"
description = "Simple personal website built on top of React and Fastapi"
authors = ["IganoSaigo <an.grigoriev84@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
SQLAlchemy = "^1.4.52"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
anyio = "^4.3.0"
email-validator = "^2.1.1"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# TODO: Shall I move to pwdlib?
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
types-passlib = "^1.7.7"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
setuptools = "^69.5.1"
pytest = "^8.1.1"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.21"
flake8-builtins = "^2.5.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.5.0"
flake8-print = "^5.0.0"
flake8-logging-format = "^0.9.0"
flake8-isort="^6.1.1"
sqlalchemy2-stubs = "^0.0.2-alpha.38"
black = "24.4.0"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
bandit = "^1.7.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.bandit]
exclude_dirs = [".venv", "tests", "alembic"]
skips = ["B101", "B104"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
  # "ignore::DeprecationWarning"
  ]
addopts = '''
  --verbose
  --show-capture=all
  --strict-markers
  --tb=short
  --log-format="%(asctime)s %(levelname)s %(message)s"
  --log-date-format="%Y-%m-%d %H:%M:%S"
  --cov=app
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml:coverage.xml
  --no-cov-on-fail
  --cov-fail-under=70
'''

[tool.pyright]
reportIncompatibleVariableOverride = false
